// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Snapshots Password 1`] = `
.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  border: 1px solid #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  width: 100%;
  direction: ltr;
  text-align: left;
}

.c2 {
  width: 100%;
  padding: 1em;
  border: none;
  color: #303030;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  caret-color: #F16622;
  font-size: 14px;
  background-color: transparent;
  resize: none;
  outline: none;
}

.c2::-webkit-input-placeholder {
  color: #B4B4B4;
}

.c2::-moz-placeholder {
  color: #B4B4B4;
}

.c2:-ms-input-placeholder {
  color: #B4B4B4;
}

.c2::placeholder {
  color: #B4B4B4;
}

.c2::selection {
  background: rgba(241,102,34,0.1);
}

.c2::-ms-reveal {
  display: none;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-color: #B4B4B4;
  color: #535353;
}

.c3:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c3 .c5 {
  color: #535353;
}

.c3:hover:enabled,
.c3:active:enabled {
  background-color: #F1F1F1;
}

.c3:active:enabled,
.c3:focus:enabled {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c4 {
  border: none;
}

.c4:hover,
.c4:focus {
  background: #E8E8E8;
}

.c0 {
  position: relative;
  display: inline-block;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <input
      autocomplete="new-password"
      class="c2"
      name="input"
      type="password"
    />
    <button
      class="c3 c4"
      type="button"
    >
      <span>
        <svg
          aria-hidden="false"
          aria-labelledby="title"
          focusable="false"
          role="img"
          style="vertical-align:middle;fill:#303030;width:20px;height:20px"
          viewBox="0 0 217 217"
        >
          <title>
            EyeOff
          </title>
          <g>
            <rect
              fill="none"
              height="217"
              width="217"
            />
            <path
              d="M173,37a5.93,5.93,0,0,0-4.24,1.76l-130,130a6,6,0,1,0,8.48,8.48l130-130A6,6,0,0,0,173,37Z"
            />
            <path
              d="M67.35,76.18A108.13,108.13,0,0,0,30.12,108a108.94,108.94,0,0,0,30.2,27.88l2.62-2.62a51.25,51.25,0,0,1,4.41-57.08Z"
              fill="none"
            />
            <path
              d="M159.72,108a51.24,51.24,0,0,1-11.07,31.82A107.92,107.92,0,0,0,185.85,108a110.65,110.65,0,0,0-30.19-27.89l-2.6,2.6A51.21,51.21,0,0,1,159.72,108Z"
              fill="none"
            />
            <path
              d="M108,131.73A23.59,23.59,0,0,0,131.73,108a24.4,24.4,0,0,0-.28-3.65l-27.1,27.1A24.4,24.4,0,0,0,108,131.73Z"
            />
            <path
              d="M108,84.27A23.59,23.59,0,0,0,84.27,108a24.4,24.4,0,0,0,.28,3.65l27.1-27.1A24.4,24.4,0,0,0,108,84.27Z"
            />
            <path
              d="M197.4,107c-8-13.33-20.09-25.45-34.25-34.36l-7.49,7.5A110.65,110.65,0,0,1,185.85,108a107.92,107.92,0,0,1-37.2,31.79,51.25,51.25,0,0,0,4.41-57.08L145.6,90.2a41.59,41.59,0,0,1-55.4,55.39L80.12,155.68a99.9,99.9,0,0,0,27.88,4,103.65,103.65,0,0,0,52.76-14.9C176,135.8,189,123.08,197.4,109l.6-1Z"
            />
            <path
              d="M30.12,108A108.13,108.13,0,0,1,67.35,76.18a51.25,51.25,0,0,0-4.41,57.08l7.47-7.46A41.6,41.6,0,0,1,125.8,70.4l10.08-10.08a99.9,99.9,0,0,0-27.88-4,103.67,103.67,0,0,0-52.85,15C40,80.25,27,93,18.6,107l-.6,1,.6,1c8,13.33,20.11,25.45,34.25,34.35l7.47-7.47A108.94,108.94,0,0,1,30.12,108Z"
            />
          </g>
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Input Snapshots Password with a value 1`] = `
.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  border: 1px solid #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  width: 100%;
  direction: ltr;
  text-align: left;
}

.c2 {
  width: 100%;
  padding: 1em;
  border: none;
  color: #303030;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  caret-color: #F16622;
  font-size: 14px;
  background-color: transparent;
  resize: none;
  outline: none;
}

.c2::-webkit-input-placeholder {
  color: #B4B4B4;
}

.c2::-moz-placeholder {
  color: #B4B4B4;
}

.c2:-ms-input-placeholder {
  color: #B4B4B4;
}

.c2::placeholder {
  color: #B4B4B4;
}

.c2::selection {
  background: rgba(241,102,34,0.1);
}

.c2::-ms-reveal {
  display: none;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-color: #B4B4B4;
  color: #535353;
}

.c3:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c3 .c5 {
  color: #535353;
}

.c3:hover:enabled,
.c3:active:enabled {
  background-color: #F1F1F1;
}

.c3:active:enabled,
.c3:focus:enabled {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c4 {
  border: none;
}

.c4:hover,
.c4:focus {
  background: #E8E8E8;
}

.c0 {
  position: relative;
  display: inline-block;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <input
      autocomplete="new-password"
      class="c2"
      name="input"
      type="password"
      value="dummy"
    />
    <button
      class="c3 c4"
      type="button"
    >
      <span>
        <svg
          aria-hidden="false"
          aria-labelledby="title"
          focusable="false"
          role="img"
          style="vertical-align:middle;fill:#303030;width:20px;height:20px"
          viewBox="0 0 217 217"
        >
          <title>
            EyeOff
          </title>
          <g>
            <rect
              fill="none"
              height="217"
              width="217"
            />
            <path
              d="M173,37a5.93,5.93,0,0,0-4.24,1.76l-130,130a6,6,0,1,0,8.48,8.48l130-130A6,6,0,0,0,173,37Z"
            />
            <path
              d="M67.35,76.18A108.13,108.13,0,0,0,30.12,108a108.94,108.94,0,0,0,30.2,27.88l2.62-2.62a51.25,51.25,0,0,1,4.41-57.08Z"
              fill="none"
            />
            <path
              d="M159.72,108a51.24,51.24,0,0,1-11.07,31.82A107.92,107.92,0,0,0,185.85,108a110.65,110.65,0,0,0-30.19-27.89l-2.6,2.6A51.21,51.21,0,0,1,159.72,108Z"
              fill="none"
            />
            <path
              d="M108,131.73A23.59,23.59,0,0,0,131.73,108a24.4,24.4,0,0,0-.28-3.65l-27.1,27.1A24.4,24.4,0,0,0,108,131.73Z"
            />
            <path
              d="M108,84.27A23.59,23.59,0,0,0,84.27,108a24.4,24.4,0,0,0,.28,3.65l27.1-27.1A24.4,24.4,0,0,0,108,84.27Z"
            />
            <path
              d="M197.4,107c-8-13.33-20.09-25.45-34.25-34.36l-7.49,7.5A110.65,110.65,0,0,1,185.85,108a107.92,107.92,0,0,1-37.2,31.79,51.25,51.25,0,0,0,4.41-57.08L145.6,90.2a41.59,41.59,0,0,1-55.4,55.39L80.12,155.68a99.9,99.9,0,0,0,27.88,4,103.65,103.65,0,0,0,52.76-14.9C176,135.8,189,123.08,197.4,109l.6-1Z"
            />
            <path
              d="M30.12,108A108.13,108.13,0,0,1,67.35,76.18a51.25,51.25,0,0,0-4.41,57.08l7.47-7.46A41.6,41.6,0,0,1,125.8,70.4l10.08-10.08a99.9,99.9,0,0,0-27.88-4,103.67,103.67,0,0,0-52.85,15C40,80.25,27,93,18.6,107l-.6,1,.6,1c8,13.33,20.11,25.45,34.25,34.35l7.47-7.47A108.94,108.94,0,0,1,30.12,108Z"
            />
          </g>
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Input Snapshots Regular Input 1`] = `
.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  border: 1px solid #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  width: 100%;
  direction: ltr;
  text-align: left;
}

.c2 {
  width: 100%;
  padding: 1em;
  border: none;
  color: #303030;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  caret-color: #F16622;
  font-size: 14px;
  background-color: transparent;
  resize: none;
  outline: none;
}

.c2::-webkit-input-placeholder {
  color: #B4B4B4;
}

.c2::-moz-placeholder {
  color: #B4B4B4;
}

.c2:-ms-input-placeholder {
  color: #B4B4B4;
}

.c2::placeholder {
  color: #B4B4B4;
}

.c2::selection {
  background: rgba(241,102,34,0.1);
}

.c2::-ms-reveal {
  display: none;
}

.c0 {
  position: relative;
  display: inline-block;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <input
      autocomplete="new-password"
      class="c2"
      name="input"
      type="text"
    />
  </div>
</div>
`;

exports[`PinInput Snapshots 4 digits filled with error message 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.3em;
  margin-bottom: 0.3em;
  line-height: 1.4;
}

.c5 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  width: 0;
  color: #D8534F;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 12px;
}

.c6 {
  margin-left: 1em;
}

.c3 {
  padding: 0;
  border: 1px solid #B4B4B4;
  border-radius: 0;
  margin: 0 0.15em;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  text-align: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
  caret-color: #F16622;
  width: 68px;
  height: 68px;
  font-size: 48px;
  border: 1px solid #D8534F;
  background: rgba(216,83,79,0.1);
  color: #D8534F;
}

.c3::-webkit-inner-spin-button,
.c3::-webkit-outer-spin-button {
  margin: 0;
}

.c3:focus {
  border: 1px solid #F16622;
  box-shadow: 0 0 0 4px rgba(241,102,34,0.2);
}

.c3::selection {
  background: rgba(241,102,34,0.1);
}

.c3:focus {
  border: 1px solid #D8534F;
  box-shadow: 0 0 0 4px rgba(216,83,79,0.5);
}

.c3::selection {
  background: rgba(216,83,79,0.1);
}

.c1 {
  display: inline-block;
  white-space: nowrap;
}

.c1 .c2:first-of-type {
  margin-left: 0;
}

.c1 .c2:last-of-type {
  margin-right: 0;
}

.c0 {
  display: inline-block;
}

<div
  class="c0"
>
  <div
    class="c1"
    dir="ltr"
  >
    <input
      autocomplete="new-password"
      autofocus=""
      class="c2 c3"
      maxlength="1"
      name="0"
      pattern="\\\\d*"
      type="text"
      value="1"
    />
    <input
      autocomplete="new-password"
      class="c2 c3"
      maxlength="1"
      name="1"
      pattern="\\\\d*"
      type="text"
      value="2"
    />
    <input
      autocomplete="new-password"
      class="c2 c3"
      maxlength="1"
      name="2"
      pattern="\\\\d*"
      type="text"
      value="3"
    />
    <input
      autocomplete="new-password"
      class="c2 c3"
      maxlength="1"
      name="3"
      pattern="\\\\d*"
      type="text"
      value="4"
    />
  </div>
  <div
    class="c4"
  >
    <span
      class="c5"
    >
      Error Message
    </span>
    <span
      class="c6"
    >
      <svg
        aria-hidden="false"
        aria-labelledby="title"
        focusable="false"
        role="img"
        style="vertical-align:middle;fill:#D8534F;width:13px;height:13px"
        viewBox="0 0 217 217"
      >
        <title>
          Warning
        </title>
        <g>
          <rect
            fill="none"
            height="217"
            width="217"
          />
          <path
            d="M109,36.62a9.23,9.23,0,0,1,6.56,2.7,9.74,9.74,0,0,1,1.83,2.61,9.6,9.6,0,0,0,.65,1.12l70.43,122,.15.24a9.27,9.27,0,0,1-8,14.14l-.66,0c-.2,0-.41,0-.62,0h-.52l-141,0h-.56a9.24,9.24,0,0,1-8-4.62,9.29,9.29,0,0,1-.93-7.07l0-.05a8.74,8.74,0,0,1,1.26-2.73,8.13,8.13,0,0,0,.58-1L100.53,42c.12-.19.23-.38.34-.59a8.81,8.81,0,0,1,1.56-2.1A9.23,9.23,0,0,1,109,36.62M31.17,159.81h0M109,27.62A18.22,18.22,0,0,0,96.07,33a17.53,17.53,0,0,0-3.17,4.28h0L22.17,159.81v0a17.73,17.73,0,0,0-2.54,5.52,18.24,18.24,0,0,0,17.65,23h.56l141.53,0h0c.43,0,.85,0,1.28,0a18.27,18.27,0,0,0,15.62-27.89L125.49,38h0a18.68,18.68,0,0,0-3.53-5A18.22,18.22,0,0,0,109,27.62Z"
          />
          <circle
            cx="109"
            cy="158.63"
            r="9"
          />
          <path
            d="M118,131.5a9,9,0,0,1-18,0V77.37a9,9,0,0,1,18,0Z"
          />
        </g>
      </svg>
    </span>
  </div>
</div>
`;

exports[`PinInput Snapshots Empty 1`] = `
.c3 {
  padding: 0;
  border: 1px solid #B4B4B4;
  border-radius: 0;
  margin: 0 0.15em;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  text-align: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
  caret-color: #F16622;
  width: 68px;
  height: 68px;
  font-size: 48px;
}

.c3::-webkit-inner-spin-button,
.c3::-webkit-outer-spin-button {
  margin: 0;
}

.c3:focus {
  border: 1px solid #F16622;
  box-shadow: 0 0 0 4px rgba(241,102,34,0.2);
}

.c3::selection {
  background: rgba(241,102,34,0.1);
}

.c1 {
  display: inline-block;
  white-space: nowrap;
}

.c1 .c2:first-of-type {
  margin-left: 0;
}

.c1 .c2:last-of-type {
  margin-right: 0;
}

.c0 {
  display: inline-block;
}

<div
  class="c0"
>
  <div
    class="c1"
    dir="ltr"
  >
    <input
      autocomplete="new-password"
      autofocus=""
      class="c2 c3"
      maxlength="1"
      name="0"
      pattern="\\\\d*"
      type="text"
      value=""
    />
    <input
      autocomplete="new-password"
      class="c2 c3"
      maxlength="1"
      name="1"
      pattern="\\\\d*"
      type="text"
      value=""
    />
    <input
      autocomplete="new-password"
      class="c2 c3"
      maxlength="1"
      name="2"
      pattern="\\\\d*"
      type="text"
      value=""
    />
    <input
      autocomplete="new-password"
      class="c2 c3"
      maxlength="1"
      name="3"
      pattern="\\\\d*"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`PinInput Snapshots change type 1`] = `
.c3 {
  padding: 0;
  border: 1px solid #B4B4B4;
  border-radius: 0;
  margin: 0 0.15em;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  text-align: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
  caret-color: #F16622;
  width: 68px;
  height: 68px;
  font-size: 48px;
}

.c3::-webkit-inner-spin-button,
.c3::-webkit-outer-spin-button {
  margin: 0;
}

.c3:focus {
  border: 1px solid #F16622;
  box-shadow: 0 0 0 4px rgba(241,102,34,0.2);
}

.c3::selection {
  background: rgba(241,102,34,0.1);
}

.c1 {
  display: inline-block;
  white-space: nowrap;
}

.c1 .c2:first-of-type {
  margin-left: 0;
}

.c1 .c2:last-of-type {
  margin-right: 0;
}

.c0 {
  display: inline-block;
}

<div
  class="c0"
>
  <div
    class="c1"
    dir="ltr"
  >
    <input
      autocomplete="new-password"
      autofocus=""
      class="c2 c3"
      maxlength="1"
      name="0"
      pattern="\\\\d*"
      type="tel"
      value=""
    />
    <input
      autocomplete="new-password"
      class="c2 c3"
      maxlength="1"
      name="1"
      pattern="\\\\d*"
      type="tel"
      value=""
    />
    <input
      autocomplete="new-password"
      class="c2 c3"
      maxlength="1"
      name="2"
      pattern="\\\\d*"
      type="tel"
      value=""
    />
    <input
      autocomplete="new-password"
      class="c2 c3"
      maxlength="1"
      name="3"
      pattern="\\\\d*"
      type="tel"
      value=""
    />
  </div>
</div>
`;
